k8s/billboard-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billboard-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billboard-client
  template:
    metadata:
      labels:
        app: billboard-client
    spec:
      containers:
      - image: asaikali/billboard-client:latest
        imagePullPolicy: Always
        name: billboard-client
        ports:
          - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: billlboard-client
  name: billboard-client
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: billboard-client
  type: NodePort
