k8s/message-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      serviceAccountName: "spring-cloud"
      containers:
      - image: asaikali/message-service
        imagePullPolicy: Always
        name: message-service
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 500m
            memory: 1G
          limits:
            cpu: 1000m
            memory: 1G
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          httpGet:
            port: 8080
            path: /actuator/health/liveness
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          httpGet:
            port: 8080
            path: /actuator/health/readiness

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: message-service
  name: message-service
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: message-service
  type: NodePort
